2006-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taperscan.c (scan_slot): append slotstr to
	  ct->error_message.
	* server-src/taperscan.c: Add a '\n' after each slot error message.

2006-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c (handle_error): Handle error from taper.

2006-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (label_tape): Set errstr and return 0 if no
	  valid tape are available.

2006-03-03  Ian Turner <ian@zmanda.com>
	* common-src/amanda.h: New macros MAX_TAPE_LABEL_LEN and 
	  MAX_TAPE_LABEL_BUF.
	* common-src/amfeatures.h: New amfeature fe_amidxtaped_FEEDME
	* recover-src/extract_list.c: Accept port number with CONNECT; 
	  implement fe_amidxtaped_FEEDME.
	* restore-src/amidxtaped.c: Introduce port number with CONNECT. 
	  (closes SF bug 1431623)
	* restore-src/restore.c: Implement fe_amidxtaped_FEEDME.
	  (closes SF bug 1421433)
	* restore-src/restore.h: Properly name rst_flags.

2006-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c (bsd_connect, netfd_read_callback, main):
	  Set bh->proto_handle to NULL after allocating bh.
	* common-src/bsd-security.c (bsd_close): Donothing if
	  bh->proto_handle == NULL.

2006-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/protocol.c (s_repwait): Decrease p->timeout on receive
					     of a PREP.

2006-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Print dumper TRY_AGAIN message.

2006-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Don't print estimate size if estimate failed.

2006-02-25  Ian Turner <ian@zmanda.com>
	* man/Makefile.am: Don't use static patterns (as they are not 
	  portable), use implicit rules instead.

2006-02-20  Kevin Till <ktill@zmanda.com>
	* common-src/krb4-security.c: changes needed for krb4/5 to compile. Thanks to
				      Orion Poplawski.
	* common-src/krb5-security.c: ditto.
